--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,26 +4,26 @@
         <!-- <div class="conteiner-nav"> -->
             <a href="header.html" class="header-logo link"> 
                 <svg class="header-logo-icon" width="60" height="65">
-                    <use href="../images"></use>
+                    <use href=""></use>
                 </svg>
             </a>
             <nav>
                 <ul class="header-site-nav list">
-                    <li class="header-item"><a href="./hero.html" class="header-nav-link current link">Home</a></li>
-                    <li class="header-item"><a href="./about.html" class="header-nav-link link">How it’s made?</a></li>
-                    <li class="header-item"><a href="./products.html" class="header-nav-link link">Our products</a></li>
-                    <li class="header-item"><a href="./contacts.html" class="header-nav-link link">Contact</a></li>
+                    <li class="header-item"><a href="" class="header-nav-link current link">Home</a></li>
+                    <li class="header-item"><a href="" class="header-nav-link link">How it’s made?</a></li>
+                    <li class="header-item"><a href="" class="header-nav-link link">Our products</a></li>
+                    <li class="header-item"><a href="" class="header-nav-link link">Contact</a></li>
                 </ul>
             </nav>
             <button type="button" class="header-button" data-modal-open>Buy now
                 <svg class="header-button-icon" width="12" height="12">
-                    <use href="../images"></use>
+                    <use href=""></use>
                 </svg>
             </button>
             <!--Бургер меню-->
             <button type="button" class="header-mobile-menu-open js-open-menu">
                 <svg class="header-mobile-menu-open-ikon" width="32" height="32">
-                    <use href="../"></use>
+                    <use href=""></use>
                 </svg>
             </button>
         <!-- </div> -->
@@ -32,23 +32,23 @@
         <div class="container header-mobile-menu-container">
             <button class="header-mobile-menu-close-btn js-close-menu">
                 <svg class="header-mobile-menu-close-icon" width="32" height="32">
-                    <use href="../images"></use>
+                    <use href=""></use>
                 </svg>
             </button>
             <a href="header.html" class="header-logo-mobile link">
                 <svg class="header-logo-mobile-icon" width="60" height="65">
-                    <use href="../images"></use>
+                    <use href=""></use>
                 </svg>
             </a>
             <ul class="header-site-nav-mobile list">
-                <li class="header-item-mobile"><a href="./hero.html" class="header-nav-link-mobile current link">Home</a></li>
-                <li class="header-item-mobile"><a href="./about.html" class="header-nav-link-mobile link">How it’s made?</a></li>
-                <li class="header-item-mobile"><a href="./products.html" class="header-nav-link-mobile link">Our products</a></li>
-                <li class="header-item-mobile"><a href="./contacts.html" class="header-nav-link-mobile link">Contact</a></li>
+                <li class="header-item-mobile"><a href="" class="header-nav-link-mobile current link">Home</a></li>
+                <li class="header-item-mobile"><a href="" class="header-nav-link-mobile link">How it’s made?</a></li>
+                <li class="header-item-mobile"><a href="" class="header-nav-link-mobile link">Our products</a></li>
+                <li class="header-item-mobile"><a href="" class="header-nav-link-mobile link">Contact</a></li>
             </ul>
             <button type="button" class="header-button-mobile">Buy now
                 <svg class="header-button-mobile-icon" width="12" height="12">
-                    <use href="../images"></use>
+                    <use href=""></use>
                 </svg>
             </button>
         </div>
