--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -64,6 +64,11 @@ p {
 
 .social-icon {
   fill: #84a178;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-icon:hover,
+.social-icon:focus {
+  fill: #FCFCFC;
 }
 .social-link-list {
   display: flex;
