--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,6 +2,7 @@
   <div class="container about-container">
     <p class="about-lable">tradition and love</p>
     <h2 class="about-title">how it’s made?</h2>
+    <div class="about-tablet-position">
     <picture class="about-picture">
       <source
         srcset="
@@ -80,5 +81,6 @@
         </button>
       </li>
     </ul>
+    </div>
   </div>
 </section>
