--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -43,6 +43,11 @@
 
 .about-list {
     width: 220px;
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+        
 }
 
 .about-list-paragraph {
@@ -84,18 +89,25 @@ height: 12pt;
 .about-picture {
     margin-top: 32px;
     margin-bottom: 40px;
-    background-color: rgba(248, 210, 78, 0.7);
-    background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
-        box-shadow: 0px 8px 30px rgba(153, 114, 23, 0.25);
-        border-radius: 250px;
-        background-position:  39px;
+    // background-color: rgba(248, 210, 78, 0.7);
+    // background-image: url(../images/background/about-bg/about-picture-bg-480.png); 
+    // background-image: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)),
+    //     #D9D9D9;
+    //     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
+    //     border-radius: 140px;
+    //     background-position:  39px;
    }
 
-   .about-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-   }
+   
+
+   .about-tablet-position {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       gap: 38px;
+    }
+
+
 @media screen and (min-width: 768px) {
 .about-lable {
     font-weight: 800;
@@ -109,13 +121,29 @@ height: 12pt;
     font-size: 34px;
     line-height: 1.26;
     letter-spacing: 0.06em;
+
+    width: 100%;
            }
 
 .about-list-paragraph {
     font-size: 12px;
     line-height: 1.75;
+    text-align: left;
+    width: 334px;
         }
+
+.about-list {
+        align-items: flex-start;
+        width: 100%;
    }
+
+   .about-tablet-position {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+   gap: 38px;
+   }
+}
 
 @media screen and (min-width: 1200px) {
 .about-lable {
