--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -155,6 +155,9 @@ p {
   }
 }
 .footer-contacts-item {
+  @media screen and (max-width: 767px) {
+    margin-top: 60px;
+  }
   @media screen and (min-width:768px){
     margin-bottom: 60px;
   }
