--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,21 +7,21 @@
     <div class="footer-contacts-item">
       <ul class="social-link-list">
         <li class="social-item">
-          <a href="">
+          <a href="https://github.com/">
             <svg class="social-icon" width="34" height="34">
               <use href="./images/sprite.svg#icon-github"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
-          <a href="">
+          <a href="https://web.telegram.org/k/">
             <svg class="social-icon" width="34" height="34">
               <use href="./images/sprite.svg#icon-telegram"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
-          <a href="">
+          <a href="https://uk-ua.facebook.com/">
             <svg class="social-icon" width="34" height="34">
               <use href="./images/sprite.svg#icon-facebook"></use>
             </svg>
