--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -7,23 +7,29 @@
     <li class="products-item products-item-cream ">
         <h3 class="products-item-title">ice cream</h3>
         <p class="products-text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
+        <a href="" class="products-link">
         <svg width="40" height="16">
-            <use></use>
+            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
         </svg>
+        </a>
     </li>
     <li class="products-item products-item-coffee">
         <h3 class="products-item-title">ice coffee</h3>
         <p class="products-text">Fragrant invigorating drink created from 100% natural ingredients without the use of preservatives and flavor enhancers</p>
+        <a href="" class="products-link">
         <svg width="40" height="16">
-            <use></use>
+            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
         </svg>
+        </a>
     </li>
     <li class="products-item products-item-milkshakes">
         <h3 class="products-item-title">milkshakes</h3>
         <p class="products-text">Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other sweets of your choice</p>
+        <a href="" class="products-link">
         <svg width="40" height="16">
-            <use></use>
+            <use href="/src/images/sprite.svg#icon-arrow-right"></use>
         </svg>
+        </a>
     </li>
 </ul>
     </div>
