--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,17 +1,48 @@
+.products {
+    text-align: center;
+    color: #131313;
+}
+
+
 .products-natural {
     font-family: var(--primary-font);
     font-weight: 800;
-    text-align: right;
+    font-size: 18px;
     line-height: 1.22;
+    text-transform: uppercase;
+    padding-top: 60px;
+    margin-bottom: 12px;
 }
 .products-title {
     font-family: var(--secondary-font);
     font-weight: 400;
     font-size: 30px;
+    line-height: 1.3;
+    text-transform: uppercase;
+}
+.products-item-title {
+    font-family: var(--primary-font);
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2;
+    text-transform: uppercase;
+}
+.products-text {
+    font-family: var(--primary-font);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.8;
     text-align: center;
+}
+.products-item {
+    border-radius: 24px;
+    padding-bottom: 16px;
+    padding-top: 126px;
+
 }
 .products-item-cream {
     background-color: #AEC6A5;
+    
 }
 .products-item-coffee {
     background-color: #EFD478;
@@ -19,6 +50,69 @@
 .products-item-milkshakes {
     background-color: #D6936D;
 }
-.products-item {
-border-radius: 24px;
+.products-list {
+    position: relative;
+}
+.products-item-cream::before {
+    content: " ";
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-image: url(/src/images/products/circl-icecream-1x.png);
+    box-shadow: 0px 5px 20px 0px rgba(10, 136, 23, 0.25);
+    background-size: 200px 200px;
+    border-radius: 100%;
+}
+.products-item-coffee::before {
+    content: " ";
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-image: url(/src/images/products/circl-coffee-1x.png);
+    box-shadow: 0px 5px 20px rgba(10, 136, 23, 0.25);
+    background-size: 200px 200px;
+    border-radius: 100%;
+}
+.products-item-milkshakes::before {
+    content: " ";
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    background-image: url(/src/images/products/circl-milkshake-1x.png);
+    box-shadow: 0px 5px 20px rgba(10, 136, 23, 0.25);
+    background-size: 200px 200px;
+    border-radius: 100%;
+}
+@media screen and (max-width: 767px) {
+    .products-list {
+            padding-left: 81px;
+            padding-right: 81px;
+            padding-bottom: 60px;
+        }
+        .products-item:not(:last-child) {
+            margin-bottom: 168px;
+        }
+        .products {
+            background-image: url(/src/images/background/mob-bg-@1x-885.jpg);
+        }
+        .products-title {
+            margin-bottom: 145px;
+        }
+        .products-item-title {
+            margin-bottom: 40px;
+        }
+        .products-text {
+            padding-bottom: 138px;
+            padding-left: 60px;
+            padding-right: 60px;
+        }
+        
+
+}
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    .hero {
+        background-image: url(../images/background/mob-bg-@2x-1162.jpg);
+    }
 }
