Update html, scss

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,9 +1,9 @@
 <header>
     <!--Головна навігація-->
     <div class="conteiner header-main-nav">
-        <!-- <div class="conteiner-nav"> -->
+        <div class="conteiner-nav">
             <a href="header.html" class="header-logo link"> 
-                <svg class="header-logo-icon" width="60" height="65">
+                <svg class="header-logo-icon">
                     <use href=""></use>
                 </svg>
             </a>
@@ -26,7 +26,7 @@
                     <use href=""></use>
                 </svg>
             </button>
-        <!-- </div> -->
+        </div>
     </div>
     <div class="header-mobile-menu js-menu-container">
         <div class="container header-mobile-menu-container">
@@ -36,7 +36,7 @@
                 </svg>
             </button>
             <a href="header.html" class="header-logo-mobile link">
-                <svg class="header-logo-mobile-icon" width="60" height="65">
+                <svg class="header-logo-mobile-icon">
                     <use href=""></use>
                 </svg>
             </a>
