--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -161,6 +161,13 @@ height: 12pt;
 .about-list-paragraph {
     font-weight: 400;
     font-size: 16px;
+    margin-top: 0;
+    margin-bottom: 0;
+
+    width: 463px;
     }
-        
+      
+.about-tablet-position {
+    gap: 109px;
+}
    }
