--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -89,13 +89,18 @@ height: 12pt;
 .about-picture {
     margin-top: 32px;
     margin-bottom: 40px;
+
+    width: 280px;
+    height: 300px;
     // background-color: rgba(248, 210, 78, 0.7);
-    // background-image: url(../images/background/about-bg/about-picture-bg-480.png); 
+    background-image: url(../images/background/about-bg/about-picture-bg-480.png); 
     // background-image: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)),
     //     #D9D9D9;
     //     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
-    //     border-radius: 140px;
-    //     background-position:  39px;
+        border-radius: 140px;
+        background-repeat: no-repeat;
+        background-position:  top;
+        padding-top: 39px;
    }
 
    
