--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -11,46 +11,41 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../sass/_gallery.scss">
 </head>
-<section>
+<section class="gallery">
     <div class="container">
-        <div class="gallery">
-            <div class="gallery-img">
-                <img srcset="
-            ../images/gallery/mob-gallery-1-@1x-280.jpg 280w,
-            ../images/gallery/mob-gallery-1-@1x-480.jpg 480w,
-            ../images/gallery/mob-gallery-1-@2x-560.jpg 560w,
-            ../images/gallery/tab-gallery-1-@1x-704.jpg 704w,
-            ../images/gallery/mob-gallery-1-@2x-960.jpg 960w,
-            ../images/gallery/tab-gallery-1-@1x-1013.jpg 1013w,
-            ../images/gallery/tab-gallery-1-@2x-1408.jpg 1408w,
-            ../images/gallery/desk-gallery-1-@2x-2026.jpg 2026w
-            " src="../images/gallery/desk-gallery-1-@1x-280.jpg" alt="Мороженко">
+        <div>
+            <h2 class="visual-hidden"> gallery</h2>
+            <div class="gallery-container">
+                <div class="whitebg">
+                    <div class="grennbg">
+                        <div class="whitebg-grennbg-content">
+                            <img class="icecream" srcset="
+                            ../images/gallery/mob-gallery-1-@1x-280.jpg 280w,
+                            ../images/gallery/mob-gallery-1-@1x-480.jpg 480w,
+                            ../images/gallery/mob-gallery-1-@2x-560.jpg 560w,
+                            ../images/gallery/tab-gallery-1-@1x-704.jpg 704w,
+                            ../images/gallery/mob-gallery-1-@2x-960.jpg 960w,
+                            ../images/gallery/tab-gallery-1-@1x-1013.jpg 1013w,
+                            ../images/gallery/tab-gallery-1-@2x-1408.jpg 1408w,
+                            ../images/gallery/desk-gallery-1-@2x-2026.jpg 2026w
+                            " src="../images/gallery/tab-gallery-1-@1x-1013.jpg" alt="Мороженко">
+                        </div>
+
+                        <div class="review">
+                            <img class="customer" srcset="
+                            ../images/reviews/review-1-@1x-85.jpg 85w,
+                            ../images/reviews/review-1-@2x-170.jpg 170w" src="../images/reviews/review-1-@1x-85.jpg"
+                                alt="Emily, Los Angeles">
+                            <p class="review-text">
+                                I love visiting your cafe. You prepare the most delicious
+                                ice cream in Los Angeles! In addition, you have beautiful
+                                serving, cozy atmosphere and polite staff.
+                            </p>
+                            <h3 class="cusomer-name">Emily, Los Angeles</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="gallery-img visual-hidden">
-                <img srcset="
-                    ../images/gallery/mob-gallery-2-@1x-280.jpg 280w,
-                    ../images/gallery/mob-gallery-2-@1x-480.jpg 480w,
-                    ../images/gallery/mob-gallery-2-@2x-560.jpg 560w,
-                    ../images/gallery/tab-gallery-2-@1x-704.jpg 704w,
-                    ../images/gallery/mob-gallery-2-@2x-960.jpg 960w,
-                    ../images/gallery/tab-gallery-2-@1x-1013.jpg 1013w,
-                    ../images/gallery/tab-gallery-2-@2x-1408.jpg 1408w,
-                    ../images/gallery/desk-gallery-2-@2x-2026.jpg 2026w
-                    " src="../images/gallery/desk-gallery-2-@1x-1013.jpg" alt="Мороженко2">
-            </div>
-            <div class="gallery-img visual-hidden">
-                <img srcset="
-                    ../images/gallery/mob-gallery-3-@1x-280.jpg 280w,
-                    ../images/gallery/mob-gallery-3-@1x-480.jpg 480w,
-                    ../images/gallery/mob-gallery-3-@2x-560.jpg 560w,
-                    ../images/gallery/tab-gallery-3-@1x-704.jpg 704w,
-                    ../images/gallery/mob-gallery-3-@2x-960.jpg 960w,
-                    ../images/gallery/tab-gallery-3-@1x-1013.jpg 1013w,
-                    ../images/gallery/tab-gallery-3-@2x-1408.jpg 1408w,
-                    ../images/gallery/desk-gallery-3-@2x-2026.jpg 2026w
-                    " src="../images/gallery/desk-gallery-3-@1x-1013.jpg" alt="Мороженко3">
-            </div>
-            <div class="whitebg"></div>
         </div>
     </div>
 </section>
