--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -40,46 +40,112 @@
         margin: -1px;
     }
 
-    /* .container {
-                    padding-left: 20px;
-                    padding-right: 20px;
-                    margin-left: auto;
-                    margin-right: auto;
-                } */
+.grennbg {
+    height: 32px;
+    background-color: #84A178;
+}
 
-    /* .grennbg{
-    background-color: ;
-} */
+.whitebg {
+    background-image: url("../images/background/mob-bg-@1x-581.jpg");
+    min-Width: 320px;
+    min-Height: 1037px;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.whitebg-grennbg-content {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.icecream {
+    border-radius: 24px;
+
+}
+
+.customer {
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 32px;
+    width: 85px;
+    height: 85px;
+}
+
+.review {
+    padding-top: 80px;
+}
+
+.review-text {
+    margin-top: 32px;
+    padding: 35px 39px;
+    max-width: 202px;
+    max-height: 186px;
+
+
+    background-color: #84A178;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2.55;
+    color: #FCFCFC;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.cusomer-name {
+    padding-top: 32px;
+    padding-bottom: 84px;
+    font-family: Montserrat;
+    font-style: Regular;
+    font-size: 20px;
+    line-height: 1.85;
+    text-align: center;
+    color: #131313;
+}
+
+
+
+
+/* ---media--- */
+/* @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .whitebg {
-        background-image: url("../images/background/mob-bg-@1x-581.jpg");
-        min-Width: 320px;
-        min-Height: 1037px;
-        margin-left: auto;
-        margin-right: auto;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
+        background-image: url("../images/background/mob-bg-@2x-1162.jpg");
+    } */
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+    .whitebg {
+        background-image: url("../images/background/mob-bg-@2x-1162.jpg");
+    }
+}
+
+/* -tablet-- */
+@media screen and (min-width: 767px) {
+    .grennbg {
+        height: 144px;
+    }
+}
+
+/* -desctop- */
+@media screen and (min-width: 1200px) {
+    .grennbg {
+        height: 98px;
     }
 
-    .gallery {
-        padding-top: 11%;
-        background-color: #84A178;
-        position: relative;
-        width: 100%;
+    .whitebg-grennbg-content {
+        padding-left: 93px;
+        padding-right: px;
     }
-
-    .gallery-img {
-        position: absolute;
-        margin-left: auto;
-        margin-right: auto;
-        top: 0px;
-        left: 0px;
-        padding-left: 20px;
-        padding-right: 20px;
-
-
-    }
-
-    .gallery-img img {
-        border-radius: 24px;
-    }
+}
