--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -16,23 +16,61 @@
     <script src="../index.js"></script>
 </head>
 
-    <section class="customer-reviews">
-        <div class="container">
-            <h2 class="visual-hidden">customer-reviews</h2>
-            <div class="swiper mySwiper gallery-swiper">
-                
+
+<section class="gallery">
+    <div class="container">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide review">
+                    <img class="customer" srcset="
+                                                ../images/reviews/review-1-@1x-85.jpg 85w,
+                                                ../images/reviews/review-1-@2x-170.jpg 170w"
+                        src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
+                    <p class="review-text">
+                        I love visiting your cafe. You prepare the most delicious
+                        ice cream in Los Angeles! In addition, you have beautiful
+                        serving, cozy atmosphere and polite staff.
+                    </p>
+                    <h3 class="cusomer-name">Emily, Los Angeles</h3>
+                </div>
+                <div class="swiper-slide review">
+                    <img class="customer" srcset="
+                                                ../images/reviews/review-2-@1x-85.jpg 85w,
+                                                ../images/reviews/review-2-@2x-170.jpg 170w"
+                        src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
+                    <p class="review-text">
+                        It's freshly made ice cream. The best place to have ice cream in Chicago.
+                        The quality is good and worth its price .
+                        Hope the price don't increase
+                    </p>
+                    <h3 class="cusomer-name">Mason, Chicago</h3>
+                </div>
+                <div class="swiper-slide review">
+                    <img class="customer" srcset="
+                                                ../images/reviews/review-3-@1x-85.jpg 85w,
+                                                ../images/reviews/review-3-@2x-170.jpg 170w"
+                        src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
+                    <p class="review-text">
+                        It's one of the best ice creams you can find in New York City.
+                        All my friends love it. The mango is the bomb.
+                        Highly recommend it!
+                    </p>
+                    <h3 class="cusomer-name">Olivia, New York</h3>
+                </div>
             </div>
-    </section>
+            <div class="swiper-pagination"></div>
+        </div>
+    </div>
+</section>
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script>
     var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
         spaceBetween: 30,
-        centeredSlides: true,
-        autoplay: {
-            delay: 2500,
-            disableOnInteraction: false,
+        keyboard: {
+            enabled: true,
         },
         pagination: {
             el: ".swiper-pagination",
