--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,21 +31,20 @@
                   cream"
         class="hero-ice-cream"
       />
-      <img src="./images/hero/left 480.svg" alt="Dots" class="hero-dots-left" />
       <img
-        src="./images/hero/right 480.svg"
+        src="./images/hero/dots-mobile.svg"
         alt="Dots"
-        class="hero-dots-right"
+        class="hero-dots-mobile"
+      />
+      <img
+        src="./images/hero/dots-tablet.svg"
+        alt="Dots"
+        class="hero-dots-tablet"
       />
       <img
         src="./images/hero/plate tablet.svg"
         alt="Plate of ice cream"
         class="hero-plate"
-      />
-      <img
-        src="./images/hero/left-tablet.svg"
-        alt="Dots"
-        class="hero-left-tablet"
       />
       <img
         src="./images/hero/all-dots-desktop.svg"
