--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -27,9 +27,8 @@
                                                 ../images/reviews/review-1-@2x-170.jpg 170w"
                         src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
                     <p class="review-text">
-                        I love visiting your cafe. You prepare the most delicious
-                        ice cream in Los Angeles! In addition, you have beautiful
-                        serving, cozy atmosphere and polite staff.
+                        Every day we come to you with friends after classes in college. 
+                        We love your ice cream and casual atmosphere!
                     </p>
                     <h3 class="cusomer-name">Emily, Los Angeles</h3>
                 </div>
@@ -37,25 +36,25 @@
                     <img class="customer" srcset="
                                                 ../images/reviews/review-2-@1x-85.jpg 85w,
                                                 ../images/reviews/review-2-@2x-170.jpg 170w"
-                        src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
+                        src="../images/reviews/review-1-@1x-85.jpg" alt="Bryan, New-York">
                     <p class="review-text">
                         It's freshly made ice cream. The best place to have ice cream in Chicago.
                         The quality is good and worth its price .
                         Hope the price don't increase
                     </p>
-                    <h3 class="cusomer-name">Mason, Chicago</h3>
+                    <h3 class="cusomer-name">Bryan, New-York</h3>
                 </div>
                 <div class="swiper-slide review">
                     <img class="customer" srcset="
                                                 ../images/reviews/review-3-@1x-85.jpg 85w,
                                                 ../images/reviews/review-3-@2x-170.jpg 170w"
-                        src="../images/reviews/review-1-@1x-85.jpg" alt="Emily, Los Angeles">
+                        src="../images/reviews/review-1-@1x-85.jpg" alt="Diana, Chicago">
                     <p class="review-text">
-                        It's one of the best ice creams you can find in New York City.
-                        All my friends love it. The mango is the bomb.
-                        Highly recommend it!
+                        Ice cream is my passion! I love your chocolate hazelnut ice cream! 
+                        And I really like the excellent service - always
+                        served politely and quickly!
                     </p>
-                    <h3 class="cusomer-name">Olivia, New York</h3>
+                    <h3 class="cusomer-name">Diana, Chicago</h3>
                 </div>
             </div>
             <div class="swiper-pagination"></div>
