--- a/src/sass/_cursor.scss
+++ b/src/sass/_cursor.scss
@@ -1,21 +1,34 @@
+
 html {
 
-  cursor: url('../images/cursor/cursor-auto-@1x.webp'), url('../images/cursor/cursor-auto-@1x.png'), auto;
+  cursor: url("../images/cursor/cursor-auto-@1x.png"), auto;
 
-  @media screen and (min-device-pixel-ratio:2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  @supports (cursor: url("data:image/webp"), auto) {
+    cursor: url("../images/cursor/cursor-auto-@1x.webp");
+  }
 
-      cursor: url('../images/cursor/cursor-auto-@2x.webp'), url('../images/cursor/cursor-auto-@2x.png'), auto;
+  @media (min-device-pixel-ratio:2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    cursor: url("../images/cursor/cursor-auto-@2x.png");
+
+    @supports (cursor: url("data:image/webp"), auto) {
+      cursor: url("../images/cursor/cursor-auto-@2x.webp"), auto;
+    }
   }
 }
 
-
 a {
 
-  cursor: url('../images/cursor/cursor-pointer-@1x.webp'),url("../images/cursor/cursor-pointer-@1x.png"), auto;
+  cursor: url("../images/cursor/cursor-auto-@1x.png"), auto;
 
-  @media screen and (min-device-pixel-ratio:2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  @supports (cursor: url("data:image/webp"), auto) {
+    cursor: url("../images/cursor/cursor-auto-@1x.webp");
+  }
 
-      cursor: url('../images/cursor/cursor-pointer-@2x.webp'),url("../images/cursor/cursor-pointer-@2x.png"), auto;
+  @media (min-device-pixel-ratio:2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    cursor: url("../images/cursor/cursor-auto-@2x.png");
+
+    @supports (cursor: url("data:image/webp"), auto) {
+      cursor: url("../images/cursor/cursor-auto-@2x.webp"), auto;
     }
-
+  }
 }
