--- a/src/partials/modal-franchise.html
+++ b/src/partials/modal-franchise.html
@@ -7,7 +7,7 @@
     <title>Franchise</title>
   </head>
   <body>
-    <div class="modal" data-modal="2">
+    <div class="modal container" data-modal="3">
       <!--   Svg иконка для закрытия окна  -->
       <svg
         class="modal__cross js-modal-close"
@@ -21,11 +21,10 @@
       <!-- <p class="modal__title">Заголовок окна 2</p> -->
 
       <!-- Подложка под модальным окном -->
-      <div class="overlay js-overlay-modal"></div>
-      <h1 class="modal-franchise-title">
+      <h1 class="modal-title">
         Thank you for your interest in owning an Ice Cream shop
       </h1>
-      <p>
+      <p class="modal-franchise-text">
         Due to the overwhelming volume of franchise requests we are not
         accepting new franchisee applications at this time. Once the application
         process resumes, we will contact you for further information. Please
@@ -84,5 +83,8 @@
         <button type="submit" class="style-button">Submit</button>
       </form>
     </div>
+
+    <!-- Overlay modal window -->
+    <div class="overlay js-overlay-modal"></div>
   </body>
 </html>
