--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -7,7 +7,7 @@
     <title>Ingredients</title>
   </head>
   <body>
-    <div class="modal" data-modal="1">
+    <div class="modal container" data-modal="1">
       <!--   Svg иконка для закрытия окна  -->
       <svg
         class="modal__cross js-modal-close"
@@ -19,19 +19,69 @@
         />
       </svg>
 
-      <!-- Overlay modal window -->
-      <div class="overlay js-overlay-modal"></div>
+      <h1 class="modal-title">Chololate icecream</h1>
+      <div>
+        <div class="modal-img-container">
+          <img
+            class="modal-img-product"
+            src="./images/Product1.jpg"
+            alt="Acecream"
+          />
+        </div>
+      </div>
+      <h2 class="visually-hidden">Nutritional value</h2>
+      <ul class="modal-nutritional-value-list">
+        <li class="modal-nutritional-value-item">
+          <div class="modal-value-container">320</div>
+          <p class="modal-nutritional-value-unit">kcal</p>
+        </li>
+        <li class="modal-nutritional-value-item">
+          <div class="modal-value-container">4g</div>
+          <p class="modal-nutritional-value-unit">Prote...</p>
+        </li>
+        <li class="modal-nutritional-value-item">
+          <div class="modal-value-container">8,2g</div>
+          <p class="modal-nutritional-value-unit">Fats</p>
+        </li>
+        <li class="modal-nutritional-value-item">
+          <div class="modal-value-container">40,4g</div>
+          <p class="modal-nutritional-value-unit">Carbs</p>
+        </li>
+      </ul>
 
-      <h1>Ingredients</h1>
+      <section class="modal-ingredients">
+        <h3 class="modal-ingredients-title">Ingredients</h2>
+        <ul>
+          <li class="modal-ingredients-item">
+            <span>Milk</span><span>100ml</span>
+          </li>
+          <li class="modal-ingredients-item">
+            <span>Belgian chocolate</span><span>20g</span>
+          </li>
+          <li class="modal-ingredients-item">
+            <span>Cream</span><span>150ml</span>
+          </li>
+          <li class="modal-ingredients-item">
+            <span>Cocoa powder</span><span>30g</span>
+          </li>
+          <li class="modal-ingredients-item">
+            <span>Sugar</span><span>40g</span>
+          </li>
+          <li class="modal-ingredients-item">
+            <span>Vanilla sugar</span><span>10g</span>
+          </li>
+        </ul>
+      </section>
+
       <!-- Form modal -->
-      <!-- <p class="modal-notification"> -->
-      <form class="modal-send-form">
-        <label class="send-form-label-name">
-          <span class="send-form-label-wrapper">
+      <h2 class="visually-hidden">Order form</h2>
+      <form class="modal-customer-form">
+        <label class="modal-customer-form-label">
+          <span class="modal-customer-form-label-wrapper">
             <input
               type="text"
               name="user_name"
-              class="send-form-input"
+              class="modal-customer-form-input"
               required
               pattern="^[a-zA-Zа-яА-Я]+$"
               minlength="2"
@@ -40,12 +90,12 @@
             />
           </span>
         </label>
-        <label class="send-form-label">
-          <span class="send-form-label-wrapper">
+        <label class="modal-customer-form-label">
+          <span class="modal-customer-form-label-wrapper">
             <input
               type="tel"
               name="user_phone"
-              class="send-form-input"
+              class="modal-customer-form-input"
               required
               pattern="[0-9]{3}[0-9]{3}[0-9]{2}[0-9]{2}"
               title="Input format: xxx-xxx-xx-xx"
@@ -53,21 +103,38 @@
             />
           </span>
         </label>
-        <label class="send-form-label">
-          <span class="send-form-label-text">Comment</span>
+        <label class="modal-customer-form-label">
           <textarea
             name="user_comment"
-            class="send-form-textarea"
+            class="modal-customer-form-textarea"
             placeholder="Comment"
           ></textarea>
         </label>
 
-        <button type="submit" class="style-button">Submit</button>
+        <button type="submit" class="modal-submit-button">Submit</button>
       </form>
     </div>
 
-    <!-- Chololate icecream 320 4g 8,2g 40,4g kcal Prote... Fats Carbs Ingredients
-    Milk 100ml Belgian chocolate 20g Cream 150 ml Cocoa powder 30g Sugar 40g
-    Vanilla sugar 10g -->
+    <!-- Overlay modal window -->
+    <div class="overlay js-overlay-modal"></div>
   </body>
+
+  <!-- <p class="modal-notification"> -->
+
+  <!-- <div class="form_box">
+
+    <label for="user_name">Имя пользователя:</label>
+    <input type="text" class="rfield" id="user_name" required />
+
+    <label for="user_family">Фамилия пользователя</label>
+    <input type="text" class="rfield" id="user_family" required />
+
+    <label for="user_phone">Телефон пользователя:</label>
+    <input type="text" class="rfield" id="user_phone" required />
+
+    <label for="user_work">Профессия пользователя:</label>
+    <input type="text" class="rfield" id="user_work" required />
+
+    <button type="submit" id="button" class="btn_submit disabled">Submit</button>
+  </div> -->
 </html>
