--- a/src/sass/_modal-all.scss
+++ b/src/sass/_modal-all.scss
@@ -1,60 +1,83 @@
-// /* style overlay*/
-// .overlay {
-//   opacity: 0;
-//   visibility: hidden;
 
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background-color: rgba(0, 0, 0, .5);
-//   z-index: 20;
-//   transition: 1.3s all;
-// }
+:root {
+  --transition-dur-and-timing-fun: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-// /* style modal windows*/
-// .modal {
-//   opacity: 0;
-//   visibility: hidden;
-//   /*  Установаем ширину окна  */
-//   width: 100%;
-//   max-width: 500px;
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 
-//   /*  Центрируем и задаем z-index */
-//   position: fixed;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   z-index: 30;
-//   /* Должен быть выше чем у подложки*/
+/* style overlay*/
+.overlay {
+  opacity: 0;
+  visibility: hidden;
 
-//   /*  Побочные стили   */
-//   box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
-//   text-align: center;
-//   padding: 30px;
-//   border-radius: 3px;
-//   background-color: #fff;
-//   transition: 1.3s all;
-// }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 520;
+  // transition: 1.3s all;
+  transition: opacity var(--transition-dur-and-timing-fun);
+  -webkit-transition: opacity var(--transition-dur-and-timing-fun);
+  -moz-transition: opacity var(--transition-dur-and-timing-fun);
+}
 
-// /* Стили для активных классов подложки и окна */
-// .modal.active,
-// .overlay.active {
-//   opacity: 1;
-//   visibility: visible;
-// }
+/* style modal windows*/
+.modal {
+  opacity: 0;
+  visibility: hidden;
+  /*  Установаем ширину окна  */
+  width: 100%;
+  
+  /*  Центрируем и задаем z-index */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 530;
+  /* Должен быть выше чем у подложки*/
 
-// /* Стили для кнопки закрытия */
-// .modal__cross {
-//   width: 15px;
-//   height: 15px;
-//   position: absolute;
-//   top: 20px;
-//   right: 20px;
-//   fill: #444;
-//   cursor: pointer;
-// }
+  /*  Побочные стили   */
+  // box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
+  text-align: center;
+  // padding: 30px;
+  // border-radius: 3px;
+  // background-color: #fff;
+  // transition: 1.3s all;
+  transition: opacity var(--transition-dur-and-timing-fun);
+  -webkit-transition: opacity var(--transition-dur-and-timing-fun);
+  -moz-transition: opacity var(--transition-dur-and-timing-fun);
+}
+
+/* Стили для активных классов подложки и окна */
+.modal.active,
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Стили для кнопки закрытия */
+.modal__cross {
+  width: 11px;
+  height: 11px;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  fill: #131313;
+  cursor: pointer;
+}
 
 /* Стили для кнопок. */
 .btn {
@@ -65,4 +88,55 @@
   margin: 10px;
   color: #fff;
   border-radius: 3px;
+}
+
+.modal.container {
+  @media screen and (max-width: 767.99px) {
+    max-width: 280px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 568px;
+  }
+
+  background-color: #fcfcfc;
+  border: 2px solid #F8D24E;
+  border-radius: 10px;
+}
+
+.modal-title {
+  @media screen and (max-width: 767.99px) {
+    margin-top: 28px;
+  }
+  
+  @media screen and (min-width: 768px) {
+    margin-top: 32px;
+  }
+  
+  font-family: 'Seymour One';
+  // font-style: normal;
+  // font-weight: 400;  
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+
+  color: #131313;
+}
+
+.modal-customer-form {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.modal-customer-form-input{
+  font-family: 'Montserrat';
+    // font-style: normal;
+    // font-weight: 400;
+    font-size: 14px;
+    line-height: 1.4;  
+  
+    color: #131313;
 }
