--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,11 +1,20 @@
-<section class="advantages">
-    <div class="advantages-wrapper container">
-        <h2 class="advantages-logo-h">how it’s made?</h2>
+<!-- <section class="advantages">
+    <div class="container">
         <p class="advantages-logo-p">tradition and love</p>
-        <!-- <li class="advantages-item"> -->
-            <img src="./images/about_cow_mob.png" alt="cow">
-        <!-- </li> -->
-        <!-- <div class="advantages-box"> -->
+        <h2 class="advantages-logo-h">how it’s made?</h2>
+            <div class="advantages-wrapper">
+                <div>
+                    <picture>    -->
+<!-- <source media="(min-width: 1200px)" srcset="/ice-cream-landing/about_cow_desk.892039b9.webp 1x, /ice-cream-landing/about_cow_desk@2x.61a3a0bf.webp 2x" type="image/webp"> -->
+<!-- <source media="(min-width: 1200px)" srcset="/ice-cream-landing/about_cow_desk.a9c1fe68.png 1x, /ice-cream-landing/about_cow_desk@2x.f8515e5c.png 2x"> -->
+<!-- <source media="(min-width: 768px)" srcset="/ice-cream-landing/about_cow_tablet.7783a4b0.webp    1x, /ice-cream-landing/about_cow_tablet@2x.d320cfec.webp 2x" type="image/webp"> -->
+<!-- <source media="(min-width: 768px)" srcset="/ice-cream-landing/about_cow_tablet.91c8de85.png 1x, /ice-cream-landing/about_cow_tablet@2x.f4160948.png 2x"> -->
+<!-- <source media="(max-width: 767px)" srcset="/ice-cream-landing/about_cow_mob.5b5cdeae.webp 1x, /ice-cream-landing/about_cow_mob@2x.e7548f7b.webp 2x" type="image/webp"> -->
+<!-- <source media="(max-width: 767px)" srcset="/ice-cream-landing/about_cow_mob.49a044d7.png 1x, /ice-cream-landing/about_cow_mob@2x.266fe0b5.png 2x"> -->
+<!-- <img src="./images/about_cow_mob.png" alt="cow">
+                    </picture>   
+                </div>
+            <div>
             <ul class="advantages-list">
                 <li class="advantages-item">
                     <p class="advantages-text"> Ice is a place where you will become not only a little happier, 
@@ -20,40 +29,36 @@
                     <p class="advantages-text"> This is enough to choose ice cream and coffee for any mood! </p>
                 </li>
             </ul>
-            <button class="adv-btn" type="button">
+        <button class="adv-btn" type="button">
                 Read more
                 <svg class="" width="5.74" height="9.98">
                     <use href="./images/sprite.svg#icon-arrow-right-bold"></use>
                 </svg>
-            </button>
-        <!-- </div> -->
-    </div>    
-    <ul class="adv-list-cow">
-        <li class="adv-item-cow">
-            <div class="adv-item-box">
-            <img src="./images/cow.png" alt="cow">
-            <!-- <svg class="cow-bac-small" width="36" height="36">
-                <use class="cow-icon" href="./images/sprite.svg#icon-cow"></use>
-            </svg> -->
-            <p class="adv-figure">721</p>
-            </div>
-            <p class="adv-figure-text"> Aliquam ac dui vel dui vulputate consectetur. Mauris massa. </p>
-        </li>
-        <li class="adv-item-cow">
-            <img class="#" src="./images/cow.png" alt="cow">
-            <svg class="cow-bac-small" width="36" height="36">
-                <use class="cow-icon" href="./images/sprite.svg#icon-weight"></use>
-            </svg>
-            <p class="adv-figure">16kg</p>
-            <p class="adv-figure-text"> Aliquam ac dui vel dui vulputate consectetur. Mauris massa. </p>
-        </li>
-        <li class="adv-item-cow">
-            <img src="./images/cow.png" alt="cow">
-            <svg class="cow-bac-small" width="36" height="36">
-                <use class="cow-icon before" href="./images/sprite.svg#icon-ice-cream"></use>
-            </svg>
-            <p class="adv-figure">84</p>
-            <p class="adv-figure-text"> Aliquam ac dui vel dui vulputate consectetur. Mauris massa. </p>
-        </li>
-    </ul>
+        </button>
+    </div>
+</section> -->
+<section class="advantages">
+  <!-- <div class="container"> -->
+  <h2 class="visibility-hidden">Advantages</h2>
+  <ul class="adv-list-cow">
+    <li class="adv-item-cow">
+      <p class="adv-figure">721</p>
+      <p class="adv-figure-text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </li>
+    <li class="adv-item-cow">
+      <p class="adv-figure">16kg</p>
+      <p class="adv-figure-text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </li>
+    <li class="adv-item-cow">
+      <p class="adv-figure">84</p>
+      <p class="adv-figure-text">
+        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+      </p>
+    </li>
+  </ul>
+  <!-- </div> -->
 </section>
