--- a/src/sass/_modal-all.scss
+++ b/src/sass/_modal-all.scss
@@ -125,13 +125,13 @@
   color: #131313;
 }
 
-.modal-customer-form {
+.modal-send-form {
   display: flex;
   flex-direction: column;
 }
 
 
-.modal-customer-form-input{
+.modal-send-form-input{
   font-family: 'Montserrat';
     // font-style: normal;
     // font-weight: 400;
