--- a/src/sass/_modal-ingredients.scss
+++ b/src/sass/_modal-ingredients.scss
@@ -32,6 +32,10 @@
   box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
 }
 
+// .modal-img-container.modal-ingredient{
+//   margin-top: 27px;
+// }
+
 .modal-img-product {
   position:relative;
   top: -7px;
@@ -110,28 +114,30 @@
   margin-bottom: 11px;
 }
 
-// .modal-customer-form-label{
+// .modal-send-form-label{
 //   width: 100%;
 // }
 
-.modal-customer-form-input,
-.modal-customer-form-textarea {
+.modal-send-form-input,
+.modal-send-form-textarea {
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   color: #000000;
 }
 
-// .modal-customer-form-label-wrapper{
+// .modal-send-form-label-wrapper{
 //   padding: 11px;
 // }
 
-.modal-customer-form-label:not(first-child) {
+.modal-send-form-label:not(first-child) {
   margin-top: 16px;
 }
 
-.modal-customer-form-textarea {
+.modal-send-form-textarea {
   height: 84px;
+  resize: none;
+  overflow: auto;
 }
 
 .modal-submit-button{
