--- a/src/sass/_modal-product-card.scss
+++ b/src/sass/_modal-product-card.scss
@@ -1,72 +1,90 @@
-// /* style overlay*/
-// .overlay {
-//   opacity: 0;
-//   visibility: hidden;
 
+.modal-title{
+  font-family: 'Seymour One';
+    // font-style: normal;
+    // font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  
+  color: #131313;
+}
+
+// .modal-products-form-label-check{
 //   position: fixed;
 //   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background-color: rgba(0, 0, 0, .5);
-//   z-index: 20;
-//   transition: 1.3s all;
+//     left: 0;
 // }
 
-// /* style modal windows*/
-// .modal {
-//   opacity: 0;
-//   visibility: hidden;
-//   /*  Установаем ширину окна  */
-//   width: 100%;
-//   max-width: 500px;
+.send-form-checkbox {
+//  position: relative;
+  margin: 0;
+  margin-top: 86px;
+  padding: 0;
+}
 
-//   /*  Центрируем и задаем z-index */
+// .modal-img-container{
+//   position: relative;
+  
+// }
+
+// .modal-products{
+//   display: flex;
+//   flex-direction: column;
+//   // line-height: 0;
+//   // width: 1px;
+// }
+
+// .modal-img-container {
 //   position: fixed;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   z-index: 30;
-//   /* Должен быть выше чем у подложки*/
-
-//   /*  Побочные стили   */
-//   box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
-//   text-align: center;
-//   padding: 30px;
-//   border-radius: 3px;
-//   background-color: #fff;
-//   transition: 1.3s all;
+//   // margin: 0;
+//   margin: -66px auto 0 auto;
+//   // top: 20px;
+//   // left: auto;
 // }
 
-// /* Стили для активных классов подложки и окна */
-// .modal.active,
-// .overlay.active {
-//   opacity: 1;
-//   visibility: visible;
-// }
+.modal-product {
+  position: fixed;
+  margin: -66px auto 0 auto;
+}
 
-/* Стили для кнопки закрытия */
-// .modal__cross {
-//   width: 15px;
-//   height: 15px;
-//   position: absolute;
-//   top: 20px;
-//   right: 20px;
-//   fill: #444;
-//   cursor: pointer;
-// }
+.modal-product1, .modal-product2, .modal-product3 {
+  // margin: 93px auto 0 auto;
+  margin: auto;
+  width: 132px;
+  // padding: 86px 16px 20px 16px;
+  // height: 136px;
+  border-radius: 15px;
+}
 
-// /* Стили для кнопок. */
-// .btn {
-//   padding: 20px;
-//   display: inline-block;
-//   text-decoration: none;
-//   background-color: #414b52;
-//   margin: 10px;
-//   color: #fff;
-//   border-radius: 3px;
-// }
+.modal-product1 {  
+  background-color: #FCFCFC;;
+  border: 2px solid #96AF8C;
+  filter: drop-shadow(0px 5px 20px rgba(212, 20, 67, 0.1));
+}
 
-.container {
-  background-color: #fcfcfc;
+.modal-product2 {
+  background-color: #EFD478;
+  border: 2px solid #EFD478;
+  box-shadow: 0px 5px 20px rgba(212, 20, 67, 0.1);
+}
+
+.modal-product3 {
+  background-color: #FCFCFC;
+  border: 2px solid #D6936D;
+  filter: drop-shadow(0px 5px 20px rgba(212, 20, 67, 0.1));    
+}
+
+.modal-product-name{
+  margin-top: 86px;
+  font-family: 'Montserrat';
+    // font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  
+    // text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  
+  color: #131313;
 }
